--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -477,6 +477,8 @@ Using your Excel spreadsheet, investigate four management scenarios for the logg
 
 **PointSolutions**: Which of the four management recommendations would have the greatest positive effect on this population?
 
+Click this link to download a CSV file of the loggerhead transition matrix (for reading into R): [CSV link](LoggerheadMatrix.csv)
+
 ### translate life history description into matrix population model
 
 If we have time, we may review the final question from Lab 4:
