--- a/LAB5.Rmd
+++ b/LAB5.Rmd
@@ -155,7 +155,7 @@ Now, what if we tried to use a random number generator to represent uncertainty 
 
 Let's try it! Here we will use a *uniform probability distribution* to represent our uncertainty about the birth rate parameter. 
 
-In InsightMaker, change the "Birth rate" parameter $b$ (previously set at 0.2) to instead draw from a **uniformly distribution** with minimum of 0.15 and maximum of 0.25 (so that the random number generator always produces values within this range). 
+In InsightMaker, change the "Birth rate" parameter $b$ (previously set at 0.2) to instead draw from a **uniform distribution** with minimum of 0.15 and maximum of 0.25 (so that the random number generator always produces values within this range). 
 
 We can do this in InsightMaker in one of two distinct ways: one way (Method #1) is to define birth rate $b$ like this:
 
@@ -183,7 +183,7 @@ The following questions relate to these two plots:
 
 Let's think through the problem one more time- we are uncertain about the *true* value of the per-capita birth rate, $b$, for a rare species. The actual birth rate for this population could be anything from 0.15 to 0.25 - we really can't say! Given this uncertainty, we want to know _what the abundance will be after 30 years_. 
 
-1g. If you were a wildlife manager tasked with predicting the abundance of this population 30 years into the future, which of the two methods (method #1 or #2) would be most appropriate for answering this question. That is, which of the two plots you produced (question 1c for method #1 or 1d for method #2) is a better representation of our uncertainty about the final population size at year 30? Explain your reasoning. [Hint: try to compare each of the plots from 1c and 1d with the results from question 1b]
+1g. If you were a wildlife manager tasked with predicting the abundance of this population 30 years into the future, which of the two methods (method #1 or #2) would be most appropriate for answering this question? That is, which of the two plots you produced (question 1c for method #1 or 1d for method #2) is a better representation of our uncertainty about the final population size at year 30? Explain your reasoning. [Hint: try to compare each of the plots from 1c and 1d with the results from question 1b]
 
 
 ## Exercise 2: Demographic and Environmental Stochasticity (inherent unpredictability)  
