--- a/LAB5.Rmd
+++ b/LAB5.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 5: Intro to stochastic models"
+title: "Lab 5: Stochasiticity and Uncertainty"
 author: "NRES 470/670"
 date: "Spring 2023"
 output: 
